data/usersCode/bvrgtb/question1/error.txt
/home/gauravghati/clash2/data/usersCode/bvrgtb/question1/code1-0.cpp:1:1: error: ‘tyjtyhthrt’ does not name a type
 tyjtyhthrt
 ^~~~~~~~~~
